# muziekshaker

./: Cargo.toml
res/: hikaru.mtl
src/: .lib.rs.rustfmt  camera.rs  lib.rs  light.rs  light.wgsl  main.rs  model.rs  object.rs  resources.rs  shader.wgsl  texture.rs
src/shaders/: blinn-phong.wgsl  cell.wgsl  flat.wgsl  light.wgsl
