[package]
name = "muziekshaker"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.24.5", default-features = false, features = ["webp", "jpeg", "png"] }
anyhow = "1.0"
cgmath = "0.18"
tobj = "3.2.1"
game-loop = { version = "0.10.2", features = ["winit"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
